--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -38,10 +38,20 @@ dependencies:
   get_it: ^7.2.0
   tuple: ^2.0.0
   google_fonts: ^3.0.1
+  floor: ^1.3.0
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  floor_generator: ^1.3.0
+  build_runner: ^2.1.2
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo_1.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
