--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^3.0.1
   floor: ^1.3.0
   cached_network_image: ^3.2.1
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
